# microservices

./: .gitignore  Readme.md
event-consumer/: Cargo.toml  Notes.md  docker-compose.yaml
event-consumer/scripts/: init_db.sh
event-consumer/src/: main.rs  model.rs
event-consumer/src/actors/: batch.rs  messages.rs  mod.rs  state.rs
event-producer/: Cargo.toml  Notes.Md  docker-compose.yml
event-producer/src/: main.rs
transactions-service/: Cargo.toml  configuration.yml  request.http  requests.http
transactions-service/scripts/: init_db.sh
transactions-service/src/: configuration.rs  lib.rs  main.rs  model.rs  telemetry.rs
transactions-service/src/routes/: health_check.rs  mod.rs  transactions.rs
transactions-service/tests/: health_check.rs  tests.rs
