[package]
name = "event-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
rdkafka = { version = "0.34.0", features = ["tokio"] }
couchbase = { git = "https://github.com/couchbaselabs/couchbase-rs.git" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4"
futures = "0.3.29"
