[package]
name = "transactions-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "transaction-service"


[dependencies]
couchbase = { git = "https://github.com/couchbaselabs/couchbase-rs.git" }
serde = { version = "1.0.190", features = ["derive"] }
actix-web = "4"
serde_json = "1.0"
futures = "0.3.29"

[dev-dependencies]
reqwest = "0.11"
tokio = "1.33.0"
