[package]
name = "transactions-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "transaction-service"


[dependencies]
couchbase = { git = "https://github.com/couchbaselabs/couchbase-rs.git" }
serde = { version = "1.0.190", features = ["derive"] }
actix-web = "4"
serde_json = "1.0"
futures = "0.3.29"
config = "0.13.3"
# Emits logs / Equivalent of log crate
tracing = { version = "0.1", features = ["log"] }
# Consumes logs/ Equivalent of env_logger / Registry do not store log data but is tracking span data (relationships between them, which are active and which are close)
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# Redirects logs to tracing subscriber (necessary to collect logs emited by actix)
tracing-log = "0.2.0"
# Better formating of logs
tracing-bunyan-formatter = "0.3"
# tracing equivalent of actix-web logger
tracing-actix-web = "0.7.9"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = "1.33.0"
rand = "0.8.5"
once_cell = "1"
